fixed up btn IDs and spacing, added in hover styles and borders

--- a/style.css
+++ b/style.css
@@ -21,26 +21,43 @@ body {
 }
 
 .calculator {
-  height: 400px;
-  width: 300px;
+  height: 620px;
+  width: 440px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
+  background-color: darkgray;
+  padding: 10px 20px;
 }
 
 #display {
   grid-area: 1/1/1/4;
-  text-align: end;
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
   font-size: 1em;
+  border: 3px solid blueviolet;
+  background-color: lightgreen;
+  color:black;
+  font-family:monospace;
+  padding: 0.1em;
+
 }
 
-#0 {
-  grid-area: 6/1/6/2;
+#btn0 {
+  grid-area: 6/1/6/3;
 }
 
 button {
   text-align: center;
   font-weight: bolder;
   font-size: 2em;
+  border: 2px solid blue;
+  border-radius: 2px;
+  box-shadow: 1px;
+  background-color: lightskyblue;
 }
 
+button:hover {
+  background-color: green;
+}
